# FlappyBirdSFML

./: .gitignore  CMakeLists.txt  README.md
src/: bird.cpp  bird.hpp  endmenu.cpp  endmenu.hpp  game.cpp  game.hpp  main.cpp  pipe.cpp  pipe.hpp  program.cpp  program.hpp  random.cpp  random.hpp
